# json-to-graph

./: .gitignore  Makefile  README.md  build.sbt  docker-compose.yaml  helper.py  pretty.txt  prometheus.yml  pyproject.toml  restcountries.json
mongo-seed/: import.sh  nyt-example.json
src/: main.py
src/json2graph/: async_relationship_reference.py  id_manager.py  id_manager_api.py  item.py  json_to_node.py  neo4j_client.py  neo4j_create_relationship.py  neo4j_relationship_data.py  node.py  node_feedback.py  operation.py  processing_api.py  relationship_reference.py  schema_api.py  schema_api_definition.py  table.py
src/json2graph/query_generator/neo4j/: neo4j_query_generator.py  node_query_generator.py
src/json2graph/turbo/extra_apis/commands/: schema_api_client_resource.py  schema_api_controller_definition.py  schema_api_creator_definition.py
src/json2graph/turbo/extra_apis/json_to_graph_apis/: json_to_graph_extra_api.py
src/main/python/: item.py  json_to_graph.py  json_to_node.py  main.py  neo4j_client.py  node.py  operation.py  operation_controller.py  processing_api.py  schema.py  schema_api.py  table.py
src/main/python/query_generator/: query_generator.py
src/main/scala/jtg/: JsonToGraph.scala
src/main/scala/jtg/api/: SchemaAPI.scala
src/python/: json_to_node.py  main.py  neo4j_client.py  node.py  operation_controller.py  schema_api.py  subnode_processing_request.py  table.py
src/python/events/: neo4j_node_created.py
src/python/query_generator/neo4j/: neo4j_query_generator.py  node_query_generator.py
src/test/: test_json_to_graph.py
(+9 files in other folders)
