[tool.poetry]
name = "json-to-graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "json_to_graph"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
